# rust-live-training

./: .gitignore  README.md
hello/src/: main.rs
query-s3-cli/: Cargo.toml
query-s3-cli/src/: lib.rs  main.rs
