[package]
name = "query-s3-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.1"
aws-sdk-s3 = "0.30.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
